WIP Reorganisation of IReferencing

--- a/astir/astir.vcxproj
+++ b/astir/astir.vcxproj
@@ -145,10 +145,14 @@
     <ClCompile Include="CppNFAGenerationHelper.cpp" />
     <ClCompile Include="dimcli\libs\dimcli\cli.cpp" />
     <ClCompile Include="Field.cpp" />
+    <ClCompile Include="FiniteAutomatonDefinition.cpp" />
     <ClCompile Include="GenerationException.cpp" />
     <ClCompile Include="GenerationHelper.cpp" />
     <ClCompile Include="IProductionReferencable.cpp" />
     <ClCompile Include="LLkBuilder.cpp" />
+    <ClCompile Include="LLkParserDefinition.cpp" />
+    <ClCompile Include="MachineDefinition.cpp" />
+    <ClCompile Include="MachineStatement.cpp" />
     <ClCompile Include="NFAAction.cpp" />
     <ClCompile Include="NFABuilder.cpp" />
     <ClCompile Include="ISyntacticEntity.cpp" />
@@ -179,6 +183,7 @@
     <ClInclude Include="Exception.h" />
     <ClInclude Include="Field.h" />
     <ClInclude Include="FileLocation.h" />
+    <ClInclude Include="FiniteAutomatonDefinition.h" />
     <ClInclude Include="GenerationException.h" />
     <ClInclude Include="GenerationHelper.h" />
     <ClInclude Include="GenerationVisitor.h" />
@@ -190,11 +195,14 @@
     <ClInclude Include="INFABuildable.h" />
     <ClInclude Include="LexicalAnalysisException.h" />
     <ClInclude Include="LLkBuilder.h" />
+    <ClInclude Include="LLkParserDefinition.h" />
+    <ClInclude Include="MachineDefinition.h" />
+    <ClInclude Include="MachineStatement.h" />
     <ClInclude Include="NFAAction.h" />
     <ClInclude Include="NFABuilder.h" />
     <ClInclude Include="ISemanticEntity.h" />
     <ClInclude Include="ISyntacticEntity.h" />
-    <ClInclude Include="IProductionReferencable.h" />
+    <ClInclude Include="IReferencing.h" />
     <ClInclude Include="LexicalAnalyzer.h" />
     <ClInclude Include="NFA.h" />
     <ClInclude Include="SymbolGroup.h" />
