--- a/astir/astir.vcxproj
+++ b/astir/astir.vcxproj
@@ -240,6 +240,7 @@
     <None Include="Tests\Test05\Test05.alex" />
     <None Include="Tests\Test06\Test06.alex" />
     <None Include="Tests\Test07\Test07.alex" />
+    <None Include="Tests\Test08\Test08.astir" />
     <None Include="Tests\Uncategorized\C99Tokenizer.alex" />
     <None Include="Tests\Uncategorized\ExampleParser.apar" />
     <None Include="Tests\Uncategorized\ExampleTokenizer.alex" />
