Generalised Parser class for Cpp boilerplate, and detto an Exception class

--- a/astir/astir.vcxproj
+++ b/astir/astir.vcxproj
@@ -213,7 +213,9 @@
     <ClInclude Include="IReferencing.h" />
     <ClInclude Include="LexicalAnalyzer.h" />
     <ClInclude Include="NFA.h" />
+    <ClInclude Include="Resources\Exception.h" />
     <ClInclude Include="Resources\Machine.h" />
+    <ClInclude Include="Resources\Parser.h" />
     <ClInclude Include="SymbolGroup.h" />
     <ClInclude Include="SyntacticAnalysisException.h" />
     <ClInclude Include="SyntacticAnalyzer.h" />
