--- a/astir/astir.vcxproj.filters
+++ b/astir/astir.vcxproj.filters
@@ -64,12 +64,6 @@
     <Filter Include="Resource Files\Tests\Test06">
       <UniqueIdentifier>{c792f448-9ab7-4465-9677-92c14e9a21ba}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\dimcli">
-      <UniqueIdentifier>{11b8e5d4-e334-4b6d-afac-4583231fe355}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\dimcli">
-      <UniqueIdentifier>{75989e96-c8f0-4140-9199-f2455bb8d449}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Resource Files\Tests\Test07">
       <UniqueIdentifier>{736d7ac8-b856-47b9-86c1-2ed34b80f0c4}</UniqueIdentifier>
     </Filter>
@@ -99,6 +93,12 @@
     </Filter>
     <Filter Include="Source Files\Generation\Cpp">
       <UniqueIdentifier>{a320fb5f-fab8-4d1e-94f5-cd0e5310eb27}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\DimCli">
+      <UniqueIdentifier>{75989e96-c8f0-4140-9199-f2455bb8d449}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\DimCli">
+      <UniqueIdentifier>{11b8e5d4-e334-4b6d-afac-4583231fe355}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -140,9 +140,6 @@
     </ClCompile>
     <ClCompile Include="SyntacticAnalyzer.cpp">
       <Filter>Source Files\Syntactic Analysis</Filter>
-    </ClCompile>
-    <ClCompile Include="dimcli\libs\dimcli\cli.cpp">
-      <Filter>Source Files\dimcli</Filter>
     </ClCompile>
     <ClCompile Include="SymbolGroup.cpp">
       <Filter>Source Files\Semantic Analysis</Filter>
@@ -194,6 +191,9 @@
     </ClCompile>
     <ClCompile Include="IndentedStringStream.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DimCli\libs\dimcli\cli.cpp">
+      <Filter>Source Files\DimCli</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -275,9 +275,6 @@
     <ClInclude Include="SyntacticAnalysisException.h">
       <Filter>Header Files\Syntactic Analysis</Filter>
     </ClInclude>
-    <ClInclude Include="dimcli\libs\dimcli\cli.h">
-      <Filter>Header Files\dimcli</Filter>
-    </ClInclude>
     <ClInclude Include="TestingSwitch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -349,6 +346,9 @@
     </ClInclude>
     <ClInclude Include="Resources\Exception.h">
       <Filter>Resource Files\Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="DimCli\libs\dimcli\cli.h">
+      <Filter>Header Files\DimCli</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
